--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "ckeditor5-custom-build": "file:ckeditor5",
+    "font-awesome": "^4.7.0",
+    "froala-editor": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-froala-wysiwyg": "^4.1.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
