--- a/package.json
+++ b/package.json
@@ -10,26 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-alignment": "^40.2.0",
-    "@ckeditor/ckeditor5-autosave": "^40.2.0",
-    "@ckeditor/ckeditor5-basic-styles": "^40.2.0",
-    "@ckeditor/ckeditor5-build-balloon": "^40.2.0",
-    "@ckeditor/ckeditor5-editor-classic": "^40.2.0",
-    "@ckeditor/ckeditor5-essentials": "^40.2.0",
-    "@ckeditor/ckeditor5-paragraph": "^40.2.0",
-    "@ckeditor/ckeditor5-react": "^6.2.0",
-    "@ckeditor/ckeditor5-theme-lark": "^40.2.0",
-    "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "ckeditor5-custom-build": "file:ckeditor5",
     "font-awesome": "^4.7.0",
-    "froala-editor": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-froala-wysiwyg": "^4.1.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-top-loading-bar": "^2.3.1",
     "verve-frontend": "file:"
