--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "nodemon": "^3.0.3",
+    "validator": "^13.11.0",
     "zod": "^3.22.4"
   }
 }
