client and server created, summary generator added

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+client/node_modules
+server/node_modules
 dist
 dist-ssr
 *.local
-.env
+client/.env
+server/.env
 
 # Editor directories and files
 .vscode/*
