--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.0",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "validator": "^13.11.0",
     "zod": "^3.22.4"
