--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.6.5",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.3.2",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
