--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/react": "^4.11.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.6.5",
     "date-fns": "^3.3.1",
     "dotenv": "^16.3.2",
     "font-awesome": "^4.7.0",
+    "html-react-parser": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
+    "react-spinners": "^0.13.8",
+    "react-spinners-kit": "^1.9.1",
     "react-top-loading-bar": "^2.3.1",
     "verve-frontend": "file:"
   },
